# fast_zero_sync

./: .coverage  .env  database.db  pyproject.toml
migrations/versions/: 13478f6f6a78_create_users_table.py  27e49862aa2e_added_updated_at_at_database.py  d6bb36d0a76f_add_server_default_func_now_for_updated_.py
src/fast_zero/: app.py  models.py  security.py  settings.py
src/fast_zero/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
